<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home2"
        android:icon="@drawable/home_24px"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_bits2"
        android:icon="@drawable/dashboard_24px"
        android:title="@string/title_bits" />

    <item
        android:id="@+id/navigation_cult2"
        android:icon="@drawable/diversity_2_24px"
        android:title="@string/title_cult" />

    <item
        android:id="@+id/navigation_fix2"
        android:icon="@drawable/emoji_objects_24px"
        android:title="@string/title_fix" />

    <item
        android:id="@+id/navigation_resources2"
        android:icon="@drawable/clinical_notes_24px"
        android:title="@string/title_resources" />

</menu>