<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.prashiksha.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bits"
        android:name="com.example.prashiksha.ui.bits.BitsFragment"
        android:label="@string/title_bits"
        tools:layout="@layout/fragment_bits" />

    <fragment
        android:id="@+id/navigation_cult"
        android:name="com.example.prashiksha.ui.cult.CultFragment"
        android:label="@string/title_cult"
        tools:layout="@layout/fragment_cult" />

    <fragment
        android:id="@+id/navigation_fix"
        android:name="com.example.prashiksha.ui.fix.FixFragment"
        android:label="@string/title_fix"
        tools:layout="@layout/fragment_fix" />

    <fragment
        android:id="@+id/navigation_resources"
        android:name="com.example.prashiksha.ui.resources.ResourcesFragment"
        android:label="@string/title_resources"
        tools:layout="@layout/fragment_resources" />
</navigation>