<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home2">

    <fragment
        android:id="@+id/navigation_home2"
        android:name="com.example.prashiksha.ui.home.HomeFragment2"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home2" />

    <fragment
        android:id="@+id/navigation_bits2"
        android:name="com.example.prashiksha.ui.bits.BitsFragment2"
        android:label="@string/title_bits"
        tools:layout="@layout/fragment_bits2" />

    <fragment
        android:id="@+id/navigation_cult2"
        android:name="com.example.prashiksha.ui.cult.CultFragment2"
        android:label="@string/title_cult"
        tools:layout="@layout/fragment_cult2" />

    <fragment
        android:id="@+id/navigation_fix2"
        android:name="com.example.prashiksha.ui.fix.FixFragment2"
        android:label="@string/title_fix"
        tools:layout="@layout/fragment_fix2" />

    <fragment
        android:id="@+id/navigation_resources2"
        android:name="com.example.prashiksha.ui.resources.ResourcesFragment2"
        android:label="@string/title_resources"
        tools:layout="@layout/fragment_resources2" />
</navigation>